# RAGfolio

./: .env.example  .gitignore  README.md  START-SERVICES.md  package.json  pnpm-lock.yaml  start-all.ps1  stop-all.ps1
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt  server_log_final.txt  server_log_pg.txt  sql_app.db  verify_auth.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1242ef6cbc30_add_comprehensive_schema.py  enable_pgvector_extension.py
apps/api/app/: __init__.py  celery_app.py  main.py  settings.py
apps/api/app/api/: dependencies.py
apps/api/app/db/: enums.py  session.py  tables.py
apps/api/app/models/: auth.py  chat.py  document.py  llm.py  organization.py  user.py
apps/api/app/routers/: auth.py  chat.py  documents.py  llm.py  organizations.py  users.py
apps/api/app/services/: audit.py  auth.py  chat.py  chunking.py  documents.py  email.py  embedding.py  file_storage.py  invitations.py  llm.py  llm_keys.py  members.py  organizations.py  quota.py  rag.py  text_extraction.py
apps/api/app/tasks/: document_processing.py
apps/api/app/utils/: auth.py  encryption.py
apps/api/storage/1/: Owner_Information.txt
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: auth.ts  chat.ts  documents.ts  index.ts  llm.ts  organizations.ts  users.ts
apps/web/src/contexts/: AppContext.tsx
apps/web/src/data/: mockData.ts
apps/web/src/hooks/: useApiError.ts
apps/web/src/lib/: api-client.ts  mappers.ts  query-keys.ts
(+24 files in other folders)
